# ts3client-dockwidget-plugin

./: CMakeLists.txt  README.md  include
.github/workflows/: c-cpp.yml  linuxbuild.yml  release.yml  winrelease.yml
src/: shared.h
